# nkfrf

./: .gitignore  Cargo.toml  flake.nix  main.rs  main_.rs  style.css  test_urgency.sh
src/: app.rs  app_state.rs  dbus.rs  dbus_client.rs  main.rs  main_.rs  notification_store.rs  notification_window.rs
tests/: integration_test.rs
