[package]
name = "nkfrf"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk4 = "0.10"  
glib = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gtk4-layer-shell = "0.7.1"
tokio = { version = "1", features = ["full"] }
zbus = "4"
zbus_macros = "4"
notify-rust = "4.11.7"
crossbeam-channel = "0.5"

